--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "el-yassir-edu-platform",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -25,15 +26,16 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.51.0",
     "@types/react-day-picker": "^5.2.1",
+    "@types/react-dom": "^18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.507.0",
-    "next": "15.3.1",
+    "next": "14.2.5",
     "pdf-lib": "^1.17.1",
-    "react": "^19.0.0",
-    "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
+    "react": "^18",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0"
   },
@@ -41,8 +43,9 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
